Fix shopping sidebar visibility

--- a/app/css/content_script.css
+++ b/app/css/content_script.css
@@ -347,12 +347,6 @@ html[dir="rtl"] .download_all_imgs_btn_pipbbdfondfipmjmdkmggihiknhmcfhd .mn-hd-t
     width: 32px;
 }
 
-/*> fix whitespace beetween compact header and search results */
-#bcenter {
-    display: none !important;
-}
-/*< fix whitespace beetween compact header and search results */
-
 /*>1 related searches */
 #rhs {
     padding-bottom: 32px !important;
